welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ')' expected but integer literal found.
    if (nums(i)==6 && nums(i)==nums(i+1) || nums(i)==6 && nums(i+1)7 ){
                                                                   ^array667:9: error: illegal start of simple expression
  }
  ^